<resources>
    <string name="app_name">FindYourBar</string>
    <string name="borrar_bar">Borrar bar</string>
    <string-array name="pager_titles">
        <item>Información</item>
        <item>Contacto</item>
        <item>Eventos</item>
    </string-array>
    <string name="entrar">Entrar</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="nombre_del_bar">Nombre del bar</string>
    <string name="descripcion_del_bar">Descripcion del bar</string>
    <string name="error_conexion">Error conexión</string>
    <string name="error_contraseña_igualdad">Contraseña incorrecta</string>
    <string name="error_contraseña_longitud">Requiere una longitud de 26 caracters</string>
    <string name="informacion">Información</string>
    <string name="contacto">"Contacto</string>
    <string name="eventos">Eventos</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="mostrar_todos_bares">Mostrar todos los bares</string>
    <string name="administracion">Administracion</string>
    <string name="editar_bar">Editar bar</string>
    <string name="menu_name_title">Nombre del bar</string>
    <string name="search_bar">Buscar bar</string>
    <string name="menu_opening_title">Horario de apertura</string>
    <string name="app_description">Tu app para encontrar todos los bares de copas en Zaragoza
    </string>
    <string name="action_settings">Ajustes</string>
    <string name="no_bar">No hay bares</string>
    <string name="no_eventos">No hay eventos</string>
    <string name="close_tip">Seleccione un horario de cierre por el que buscar:</string>
    <string name="menu_name">Nombre del bar</string>
    <string name="in_name">Introduzca el nombre del bar a buscar</string>
    <string name="titulo_bares">Bares</string>
    <string name="bar_direccion">Dirección</string>
    <string name="bar_contacto">Contacto</string>
    <string name="bar_mapa">Localización en mapa</string>
    <string name="bar_telefono">Teléfono:</string>
    <string name="bar_email">Email:</string>
    <string name="bar_facebook">Facebook:</string>
    <string name="menu_open">Horario de apertura</string>
    <string-array name="opening_schedule">
        <item>Cualquiera</item>
        <item>Abierto a las 22:00 h</item>
        <item>Abierto a las 23:00 h</item>
        <item>Abierto a las 00:00 h</item>
    </string-array>
    <string-array name="closing_schedule">
        <item>Cualquiera</item>
        <item>Hasta las 03:00 h</item>
        <item>Hasta las 04:00 h</item>
        <item>Hasta las 05:00 h</item>
        <item>Hasta las 06:30 h</item>
    </string-array>
    <string-array name="music_genre">
        <item>Cualquiera</item>
        <item>Pop/Música comercial</item>
        <item>Rap</item>
        <item>Rock/Metal</item>
        <item>Latina</item>
        <item>Indie</item>
        <item>Electrónica</item>
        <item>60s - 80s</item>
    </string-array>
    <string-array name="age_groups">
        <item>Cualquiera</item>
        <item>A partir de 16 años</item>
        <item>A partir de 18 años</item>
        <item>A partir de 21 años</item>
    </string-array>
    <string name="menu_close">Horario de cierre</string>
    <string name="menu_music">Música</string>
    <string name="menu_age">Edad</string>
    <string name="aplicar">Aplicar</string>
    <string name="cancelar">Cancelar</string>
    <string name="quitar_filtros">Quitar filtros</string>
    <string name="buscar">Buscar</string>
    <string name="reintentar">Reintentar</string>
    <string name="filtros">Filtros</string>
    <string name="acept">Aceptar</string>
    <string name="direccion_del_bar">Dirección:</string>
    <string name="email_del_bar">Email:</string>
    <string name="facebook_del_bar">Facebook:</string>
    <string name="crear">Crear</string>
    <string name="añadir_imagen">Añadir imagen</string>
    <string name="url_de_la_imagen">URL de la imagen</string>
    <string name="url">URL</string>
    <string name="edad_minima_del_bar">Edad minima</string>
    <string name="tipo_musica_del_bar">Tipo musica</string>
    <string name="horario_apertura_del_bar">Horario apertura</string>
    <string name="horario_cierre_del_bar">Horario cierre</string>
    <string name="no_puede_estar_vacio">No puede estar vacio</string>
    <string name="edad_mayor_15_años">La edad ha de ser mayor que 15 años</string>
    <string name="telefono_tiene_9_cifras">Ha de tener 9 cifras</string>
    <string name="corrija_lor_errores">Corrija los errores primero</string>
    <string name="no_es_hora_valida">No es una hora valida</string>
    <string name="selecciona_generos_musica">Selecciona generos musica</string>
    <string name="añadir_genero_musica">Añadir</string>
    <string name="esta_seguro">¿Esta seguro?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="error_nombre_ya_existe">Un bar con ese nombre ya existe</string>
</resources>