<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:visibility="visible"
                      android:baselineAligned="false">
            <TextView
                android:id="@+id/bar_direccion_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:text="@string/bar_direccion"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/actionbar_background"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bar_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/bar_contacto_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:text="@string/bar_contacto"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/actionbar_background"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bar_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="8dp"
                android:text="@string/bar_telefono"
                android:onClick="onClick"
                android:clickable="true"/>

            <TextView
                android:id="@+id/bar_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:drawableLeft="@drawable/mail"
                android:drawablePadding="8dp"
                android:text="@string/bar_email"
                android:onClick="onClick"
                android:clickable="true"/>

            <TextView
                android:id="@+id/bar_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:drawableLeft="@drawable/social"
                android:drawablePadding="8dp"
                android:text="@string/bar_facebook"
                android:onClick="onClick"
                android:clickable="true"/>

            <Button
                android:id="@+id/mapaSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/location"
                android:drawablePadding="16dp"
                android:layout_marginTop="25dp"
                android:background="@color/actionbar_background"
                android:padding="16dp"
                android:text="@string/bar_mapa"
                android:textSize="20dp"
                android:onClick="onClick"
                android:clickable="true"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>